## Makefile.am -- Process this file with automake to produce Makefile.in
lib_LTLIBRARIES = gm_digitalclock.la
gm_digitalclock_la_SOURCES = main.c
gm_digitalclock_la_CPPFLAGS = $(GTK_CFLAGS)
gm_digitalclock_la_CPPFLAGS += @GM_INCLUDES@
gm_digitalclock_la_LIBADD = $(GTK_LIBS)
gm_digitalclock_la_LDFLAGS = -module -avoid-version

