## Makefile.am -- Process this file with automake to produce Makefile.in
lib_LTLIBRARIES = libgm_generic.la
libgm_generic_la_SOURCES = gm_generic.c gm_generic.h
include_HEADERS = gm_generic.h
libgm_generic_la_CPPFLAGS = $(GTK_CFLAGS)
libgm_generic_la_LIBADD = $(GTK_LIBS)
libgm_generic_la_LDFLAGS = -version-info 0:0:0
